--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "mysql2": "^3.6.0",
     "bcryptjs": "^2.4.3",
     "express-session": "^1.17.3",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4"
   }
 }
